references for theory and observations for exoplanet radio emission are added

--- a/biblio.bib
+++ b/biblio.bib
@@ -2,12 +2,158 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Yuka Fujii at 2015-06-02 17:22:10 +0900 
+%% Created for Yuka Fujii at 2015-06-02 22:53:17 +0900 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{murphy2015,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.446.2560M},
+	Archiveprefix = {arXiv},
+	Author = {{Murphy}, T. and {Bell}, M.~E. and {Kaplan}, D.~L. and {Gaensler}, B.~M. and {Offringa}, A.~R. and {Lenc}, E. and {Hurley-Walker}, N. and {Bernardi}, G. and {Bowman}, J.~D. and {Briggs}, F. and {Cappallo}, R.~J. and {Corey}, B.~E. and {Deshpande}, A.~A. and {Emrich}, D. and {Goeke}, R. and {Greenhill}, L.~J. and {Hazelton}, B.~J. and {Hewitt}, J.~N. and {Johnston-Hollitt}, M. and {Kasper}, J.~C. and {Kratzenberg}, E. and {Lonsdale}, C.~J. and {Lynch}, M.~J. and {McWhirter}, S.~R. and {Mitchell}, D.~A. and {Morales}, M.~F. and {Morgan}, E. and {Oberoi}, D. and {Ord}, S.~M. and {Prabu}, T. and {Rogers}, A.~E.~E. and {Roshi}, D.~A. and {Shankar}, N.~U. and {Srivani}, K.~S. and {Subrahmanyan}, R. and {Tingay}, S.~J. and {Waterson}, M. and {Wayth}, R.~B. and {Webster}, R.~L. and {Whitney}, A.~R. and {Williams}, A. and {Williams}, C.~L.},
+	Date-Added = {2015-06-02 13:53:10 +0000},
+	Date-Modified = {2015-06-02 13:53:16 +0000},
+	Doi = {10.1093/mnras/stu2253},
+	Eprint = {1410.6819},
+	Journal = {\mnras},
+	Keywords = {radio continuum: planetary systems},
+	Month = jan,
+	Pages = {2560-2565},
+	Primaryclass = {astro-ph.EP},
+	Title = {{Limits on low-frequency radio emission from southern exoplanets with the Murchison Widefield Array}},
+	Volume = 446,
+	Year = 2015,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1093/mnras/stu2253}}
+
+@article{hallinan2013,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...762...34H},
+	Archiveprefix = {arXiv},
+	Author = {{Hallinan}, G. and {Sirothia}, S.~K. and {Antonova}, A. and {Ishwara-Chandra}, C.~H. and {Bourke}, S. and {Doyle}, J.~G. and {Hartman}, J. and {Golden}, A.},
+	Date-Added = {2015-06-02 13:52:17 +0000},
+	Date-Modified = {2015-06-02 13:53:09 +0000},
+	Doi = {10.1088/0004-637X/762/1/34},
+	Eid = {34},
+	Eprint = {1210.8259},
+	Journal = {\apj},
+	Keywords = {planets and satellites: aurorae, planets and satellites: detection, planets and satellites: individual: {$\tau$} Bo{\"o}tis b, planets and satellites: magnetic fields, radio continuum: planetary systems},
+	Month = jan,
+	Pages = {34},
+	Primaryclass = {astro-ph.EP},
+	Title = {{Looking for a Pulse: A Search for Rotationally Modulated Radio Emission from the Hot Jupiter, {$\tau$} Bo{\"o}tis b}},
+	Volume = 762,
+	Year = 2013,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1088/0004-637X/762/1/34}}
+
+@article{george2007,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2007MNRAS.382..455G},
+	Archiveprefix = {arXiv},
+	Author = {{George}, S.~J. and {Stevens}, I.~R.},
+	Date-Added = {2015-06-02 13:51:00 +0000},
+	Date-Modified = {2015-06-02 13:51:06 +0000},
+	Doi = {10.1111/j.1365-2966.2007.12387.x},
+	Eprint = {0708.4079},
+	Journal = {\mnras},
+	Keywords = {magnetic field, planetary systems, radio continuum: general},
+	Month = nov,
+	Pages = {455-460},
+	Title = {{Giant Metrewave Radio Telescope low-frequency observations of extrasolar planetary systems}},
+	Volume = 382,
+	Year = 2007,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1111/j.1365-2966.2007.12387.x}}
+
+@article{stroe2012,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2012A%26A...546A.116S},
+	Archiveprefix = {arXiv},
+	Author = {{Stroe}, A. and {Snellen}, I.~A.~G. and {R{\"o}ttgering}, H.~J.~A.},
+	Date-Added = {2015-06-02 13:49:02 +0000},
+	Date-Modified = {2015-06-02 13:49:10 +0000},
+	Doi = {10.1051/0004-6361/201220006},
+	Eid = {A116},
+	Eprint = {1209.6515},
+	Journal = {\aap},
+	Keywords = {planetary systems, radio continuum: stars},
+	Month = oct,
+	Pages = {A116},
+	Primaryclass = {astro-ph.EP},
+	Title = {{A stringent upper limit to 18 cm radio emission from the extrasolar planet system {$\tau$} Bo{\"o}tis}},
+	Volume = 546,
+	Year = 2012,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/201220006}}
+
+@article{bastian2000,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2000ApJ...545.1058B},
+	Author = {{Bastian}, T.~S. and {Dulk}, G.~A. and {Leblanc}, Y.},
+	Date-Added = {2015-06-02 13:48:07 +0000},
+	Date-Modified = {2015-06-02 13:48:14 +0000},
+	Doi = {10.1086/317864},
+	Journal = {\apj},
+	Keywords = {Masers, Stars: Planetary Systems, Radiation Mechanisms: Nonthermal, Stars: Low-Mass, Brown Dwarfs},
+	Month = dec,
+	Pages = {1058-1063},
+	Title = {{A Search for Radio Emission from Extrasolar Planets}},
+	Volume = 545,
+	Year = 2000,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/317864}}
+
+@article{sirothia2014,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2014A%26A...562A.108S},
+	Author = {{Sirothia}, S.~K. and {Lecavelier des Etangs}, A. and {Gopal-Krishna} and {Kantharia}, N.~G. and {Ishwar-Chandra}, C.~H.},
+	Date-Added = {2015-06-02 13:46:56 +0000},
+	Date-Modified = {2015-06-02 13:47:00 +0000},
+	Doi = {10.1051/0004-6361/201321571},
+	Eid = {A108},
+	Journal = {\aap},
+	Keywords = {radio continuum: general, planetary systems, planets and satellites: detection},
+	Month = feb,
+	Pages = {A108},
+	Title = {{Search for 150 MHz radio emission from extrasolar planets in the TIFR GMRT Sky Survey}},
+	Volume = 562,
+	Year = 2014,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/201321571}}
+
+@article{reiners2010,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2010A%26A...522A..13R},
+	Archiveprefix = {arXiv},
+	Author = {{Reiners}, A. and {Christensen}, U.~R.},
+	Date-Added = {2015-06-02 13:40:48 +0000},
+	Date-Modified = {2015-06-02 13:40:55 +0000},
+	Doi = {10.1051/0004-6361/201014251},
+	Eid = {A13},
+	Eprint = {1007.1514},
+	Journal = {\aap},
+	Keywords = {planets and satellites: magnetic fields, stars: activity, stars: magnetic field, brown dwarfs, stars: low-mass},
+	Month = nov,
+	Pages = {A13},
+	Primaryclass = {astro-ph.EP},
+	Title = {{A magnetic field evolution scenario for brown dwarfs and giant planets}},
+	Volume = 522,
+	Year = 2010,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361/201014251}}
+
+@article{lazio2004,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2004ApJ...612..511L},
+	Author = {{Lazio}, W., T.~J. and {Farrell}, W.~M. and {Dietrick}, J. and {Greenlees}, E. and {Hogan}, E. and {Jones}, C. and {Hennig}, L.~A.},
+	Date-Added = {2015-06-02 13:37:32 +0000},
+	Date-Modified = {2015-06-02 13:37:38 +0000},
+	Doi = {10.1086/422449},
+	Journal = {\apj},
+	Keywords = {Magnetic Fields, Radio Continuum: Stars, Sun: Solar Wind},
+	Month = sep,
+	Pages = {511-518},
+	Title = {{The Radiometric Bode's Law and Extrasolar Planets}},
+	Volume = 612,
+	Year = 2004,
+	Bdsk-Url-1 = {http://dx.doi.org/10.1086/422449}}
 
 @article{zarka_et_al2004,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
@@ -6944,19 +7090,6 @@ Appendices A and B are only available in electronic form at http://www.aanda.org
 	Volume = 55,
 	Year = 2007,
 	Bdsk-Url-1 = {http://dx.doi.org/10.1016/j.pss.2006.09.002}}
-
-@article{griebmeier_et_al2005,
-	Adsnote = {Provided by the Smithsonian/NASA Astrophysics Data System},
-	Adsurl = {http://adsabs.harvard.edu/abs/2005A%26A...437..717G},
-	Author = {{Grie{\ss}meier}, J.-M. and {Motschmann}, U. and {Mann}, G. and {Rucker}, H.~O.},
-	Doi = {10.1051/0004-6361:20041976},
-	Journal = {\aap},
-	Month = jul,
-	Pages = {717-726},
-	Title = {{The influence of stellar wind conditions on the detectability of planetary radio emissions}},
-	Volume = 437,
-	Year = 2005,
-	Bdsk-Url-1 = {http://dx.doi.org/10.1051/0004-6361:20041976}}
 
 @article{griffith+yelle1999,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
