introduction is updated

--- a/ms.tex
+++ b/ms.tex
@@ -152,24 +152,24 @@ yuka.fujii@elsi.jp
 Planets with strong magnetic fields may generate radio or X-ray emission when interacting with energetic charged particles. 
 It has been known that Jupiter emits radio emission from the radiation belt and auroral region due to cyclotron-maser instability \citep{zarka1998}.  % due to the acceleration of the plasmas. \memoYF{?}.
 Potentially, exoplanets can also emit radio waves through the similar mechanisms, depending on their intrinsic magnetic fields and the density of surrounding plasmas, e.g. stellar wind particles and particles from Io-like moons. 
-In particular, those in close orbit to the host stars have attracted attention because they are subjected to strong stellar wind and/or strong magnetic interstellar magnetic field, and thus acquire larger input energy. 
-Radio emission from known exoplanets have been roughly estimated based on the the empirical scaling of the radio intensity with the solar wind flux known as ``radiometric Bode's law'' \citep{farrell1999,zarka2001,Lazio2004,griesmeier2004,griesmeier2005,griesmeier2007a,griesmeier2007b,reiners2010}. 
-Although the search for these radio signatures are being conducted, there is no clear detection claimed so far
+Observations of radio emission from Solar System planets imply an empirical relation that the radio intensity is proportional to the input solar wind flux going into each planetary magnetosphere, which is known as  ``radiometric Bode's law'' \citep{desch+kaiser1984}. 
+Based on this law, exoplanets in close-in orbits have been attracted attention as possible bright radio wave emitters because they are subjected to strong stellar wind and/or strong interstellar magnetic field, and thus can gain larger energy input. Motivated by such speculations, spectral radio intensity from known exoplanets have been estimated  \citep{farrell1999,zarka2001,Lazio2004,griesmeier2004,griesmeier2007a,griesmeier2007b,reiners2010}. 
+In addition, young planetary systems where the stellar wind activity is stronger are also taken into consideration \citep{griesmeier2005}. 
+Although the observational search for these radio signatures are being conducted, there is no clear detection claimed so far
 \citep{bastian2000,george2007,stroe2012,hallinan2013,murphy2015}, 
-while some indications were obtained \citep{lecavelier_et_al2013,sirothia2014}. 
-
+while some indications have been obtained \citep{lecavelier_et_al2013,sirothia2014}. 
 
 When stars less than $\sim$8~$M_\sun$ evolve off the main sequence,
 they go through stages on the red-giant branch (RGB) and the
 asymptotic-giant branch (AGB) where their radii and luminosities increase by orders of magnitude. 
 Jovian planets in orbit around such stars can be transiently heated to hot-Jupiter temperatures ($\sim$1000~K or more) at distances out to tens of AU, depending on the star's mass \citep{spiegel+madhusudhan2012}. 
 At the same time, they are subject to massive (but slow) stellar wind, as the mass-loss rate of such evolved stars are significantly higher than the main-sequence counterparts, ranging from $\sim  10^{-8} M_\odot$/yr to $\sim  10^{-5} M_\odot$/yr with the highest values for AGB stars \citep[e.g.,][]{reimers1975, schild1989, vassiliadis1993, schoier2001, vanloon2005}, significantly larger than solar mass-loss rate $\sim 10^{-14}M_\odot$/yr. 
-On the assumption that the radio emission is correlated with the stellar wind, planetary companions around evolved stars could generate bright radio emission.
+On the assumption that the radio emission is correlated with the stellar wind, planetary companions around evolved stars could also generate bright radio emission. 
 
 In this paper we estimate the potential to detect planetary companions around evolved stars through the brightness of their radio emission. 
 In \S2, we describe our assumptions for the scaling of planetary radio emission, stellar wind, and planetary magnetosphere.
 \S3 presents a simple estimate of the spectral radio intensity of RGHJs and compares them with what might be expected from canonical hot Jupiters.
-\S3 also describes the surprising result that, although the planetary magnetic field is crucial to the generation of radio emission at all, there might be an important region in parameter space in which planets with stronger magnetic fields are less easily observable.
+%\S3 also describes the surprising result that, although the planetary magnetic field is crucial to the generation of radio emission at all, there might be an important region in parameter space in which planets with stronger magnetic fields are less easily observable. 
 \S4 discusses possible obstacles to detect radio emission from RGHJs, in particular the effects of intrinsic radio emission of evolved stars and the offsetting effect of the electrons spiraling down along the planetary magnetic field.
 Observability with current and near-future instruments is also examined in \S4. 
 Finally, \S5 concludes the paper with a brief summary. 
