changed a few () to [] for functions

--- a/ms.tex
+++ b/ms.tex
@@ -693,7 +693,7 @@ where $\rho_K$ and $\rho_B$ are the kinetic energy density and the magnetic ener
 At the magnetic stand-off point, 
 %%%
 \begin{equation}
-m_p n(r_s) v^2 = \frac{B(r_s)^2}{2\pi }
+m_p n[r_s] v^2 = \frac{B[r_s]^2}{2\pi }
 \end{equation}
 %%%
 and thus $\rho_K \sim \rho _B$. When the particle spirals into the planet, the kinetic energy of the moment is
