--- a/ms.tex
+++ b/ms.tex
@@ -411,7 +411,7 @@ Because $\rho _c \propto M_p$  at large $M_p$ and $q_c \propto t^{-1.3} M_p^{2.6
 %%%%%%%%%% 
 \begin{eqnarray}
 B   &\sim &  10~{\rm G} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} \left( \frac{M_p }{M_{p,J}} \right)^{1.38} \label{eq:scalingB} \\
-f_c &\sim &  28~{\rm MHz} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} \left( \frac{M_p }{M_{p,J}} \right)^{1.38} \label{eq:scalingfc} 
+f_{\rm cyc} &\sim &  28~{\rm MHz} \left( \frac{t}{4.5~\rm{Gyr}} \right)^{-0.43} \left( \frac{M_p }{M_{p,J}} \right)^{1.38} \label{eq:scalingfc} 
 \end{eqnarray}
 %%%%%%%%%%
 under this model. 
@@ -494,7 +494,7 @@ RGHJ & $M_J$ & $B_J$ & 5 AU &  0.4 days \\ \hline
 Combining the expressions above for the dependence of radio emission on planetary magnetic field strength, we find that the radio spectral flux density observed at the Earth is:
 %%%
 \begin{eqnarray}
-F_{\nu} &=& \frac{P_{\rm radio}}{\Omega d^2 f_{\rm cyclotron}} \\
+F_{\nu} &=& \frac{P_{\rm radio}}{\Omega d^2 f_{\rm cyc}} \\
 &\approx & 5.22\times 10^{-6} \mbox{Jy} \left( \frac{d}{10\mbox{~pc}} \right)^{-2}  \notag \\
 &&\times \left( \frac{B}{B_J} \right)^{-1/3}  \left( \frac{a}{5~\mbox{AU}} \right)^{-4/3} \notag \\
 && \times \left( \frac{\dot M_\star}{\dot M_{\odot}} \right)^{2/3} \left( \frac{v}{v_{\odot}} \right)^{5/3} \label{eq:F_nu} \\
@@ -751,7 +751,7 @@ On the other hand, the ambient magnetic field strength increase as $\propto r^{-
 
 %Since by definition $\rho_K/\rho_B < 1$ inside the magnetic stand-off point where the auroral emission is from, the canceling magnetic field is much smaller than the canceling magnetic field. 
 
-Note that that for a plasma of protons and electrons in solar wind the canceling field is clearly dominated by the contribution of protons, though the cyclotron emission is dominated by electrons. \memoYF{necessary to mention?}
+It is interesting to note that, for a plasma of protons and electrons in a stellar wind, the canceling field is clearly dominated by the contribution of protons, though the cyclotron emission is dominated by electrons. \memoYF{necessary to mention?}
 
 
 
