--- a/ms.tex
+++ b/ms.tex
@@ -751,7 +751,7 @@ On the other hand, the ambient magnetic field strength increase as $\propto r^{-
 
 %Since by definition $\rho_K/\rho_B < 1$ inside the magnetic stand-off point where the auroral emission is from, the canceling magnetic field is much smaller than the canceling magnetic field. 
 
-Note that that for a plasma of protons and electrons in solar wind the canceling field is clearly dominated by the contribution of protons, though the cyclotron emission is dominated by electrons. \memoYF{necessary to mention?}
+%Note that that for a plasma of protons and electrons in solar wind the canceling field is clearly dominated by the contribution of protons, though the cyclotron emission is dominated by electrons. \memoYF{necessary to mention?}
 
 
 
