some very simple updates to affiliations and a duplicate equation label.

--- a/ms.tex
+++ b/ms.tex
@@ -93,9 +93,9 @@ Nikku Madhusudhan\altaffilmark{4} \\
 %
 Mehrdad Mirbabayi\altaffilmark{1} \\
 %
-Aaron Parsons\altaffilmark{5} \\
+Aaron Parsons\altaffilmark{4} \\
 %
-Tony Mroczkowski\altaffilmark{6} \\
+Tony Mroczkowski\altaffilmark{5,6} \\
 %
 Neil Zimmerman\altaffilmark{7}
 }
@@ -113,11 +113,13 @@ Neil Zimmerman\altaffilmark{7}
 
 \affil{$^3$Astronomy Department, University of Cambridge, UK}
 
-\affil{$^4$Astronomy Department, UC Berkeley}
+\affil{$^4$Astronomy Department, University of California Berkeley}
 
-\affil{$^5$Naval Research Laboratory}
+\affil{$^5$National Research Council Fellow}
 
-\affil{$^6$Department of Mechanical and Aerospace Engineering, Princeton University, Princeton, NJ 08544}
+\affil{$^6$Naval Research Laboratory, 4555 Overlook Ave SW, Washington, DC 20375}
+
+\affil{$^7$Department of Mechanical and Aerospace Engineering, Princeton University, Princeton, NJ 08544}
 
 
 \vspace{0.5\baselineskip}
@@ -271,7 +273,7 @@ Therefore, we have
 %%%%%%%%%%
 \begin{equation}
 q_c \sim q_{c, J} \left( \frac{t}{4.5 \rm~Gyr} \right)^{-1.3} \left( \frac{M_p}{M_J} \right)^{2.64} \left( \frac{r_c}{r_{c,\,J}} \right)^{-2}\, .
-\label{eq:burrowsLum}
+\label{eq:burrowsHeatFlux}
 \end{equation}
 %%%%%%%%%%
 %We estimate the convected heat flux by dividing this luminosity by the surface area of the core region, i.e., $4 \pi r_c^2$. 
