--- a/ms.tex
+++ b/ms.tex
@@ -305,7 +305,7 @@ q_c \sim q_{c, J} \left( \frac{t}{4.5 \rm~Gyr} \right)^{-1.3} \left( \frac{M_p}{
 The peak of the auroral radio emission is around the cyclotron frequency of the planetary magnetic field, $f_{\rm cyc}$: 
 %%%%%%%%%% 
 \begin{equation}
-f_{\rm cyc} = \frac{eB}{2\pi m_e} \approx 27.9 {\rm~MHz} \left( \frac{B}{10 \rm~G} \right) \label{eq:cyc} 
+f_{\rm cyc} = \frac{eB}{2\pi m_e} \approx 27.9 {\rm~MHz} \left( \frac{B}{10 \rm~G} \right) \label{eq:fcyc}
 \end{equation}
 %%%%%%%%%%
 where $e$ and $m_e$ are the charge and mass of the electron, respectively.
@@ -322,7 +322,7 @@ At the favorable viewing condition, when the planet is on the near side of its s
 Therefore, combining Eq.~(\ref{eq:n}) and Eq.~(\ref{eq:fplasma}), we have
 %%%
 \begin{eqnarray}
-\label{eq:fplasmalos} f_{\rm plasma}^{\rm los} & \sim & 8.98 {\rm~kHz} \times \left( \frac{\dot M_\star}{4 \pi a^2 m_p v} \cdot \frac{1}{\rm cm^{-3}} \right)^{1/2} \\
+\label{eq:fplasmalos} f_{\rm plasma}^{\rm los} & \sim & 8.98 {\rm~kHz} \times \left( \frac{\dot M_\star}{4 \pi a^2 m_p v} \times 1\rm~cm^3 \right)^{1/2} \\
 \label{eq:fplasmalos_scaled} & = & 14.7{\rm~MHz} \times \left( \frac{a}{5~\mbox{AU}}\right)^{-1} \left(\frac{v}{0.1 v_{\odot}}  \right)^{-1/2} \notag \\
  & & \times \left( \frac{\dot M_\star}{10^6 \dot M_{\odot}}\right)^{1/2} \, ,
 \end{eqnarray}
@@ -522,14 +522,14 @@ F_{\nu} &=& \frac{P_{\rm radio}}{\Omega d^2 f_{\rm cyc}} \\
 Thus, RGHJs are expected to be intrinsically as bright as the closest hot Jupiters, and Jupiter-like planets around AGB stars are potentially orders-of-magnitude brighter than them. 
 Note that, within this framework, the {\it spectral} radio flux has  necessarily negative correlation with the planetary magnetic field, as pointed out by \citet{griesmeier2005}. 
 
-However, observed energy flux is limited by the plasma cut-off frequency in the vicinity of the planets, given by Eq.~(\ref{eq:fplasmalos}).
-This condition is:
+However, observed energy flux is limited by the plasma cut-off frequency in the vicinity of the planets, given by Eq.~(\ref{eq:fplasmalos_scaled}).
+We can see emission only from where the cyclotron frequency (Eq.~\ref{eq:fcyc}) exceeds the plasma frequency:
 %%%
 \begin{equation}
 \label{eq:fcyc>fplasma} f_{\rm cyc} > f_{\rm plasma}^{\rm los}
 \end{equation} 
 %%%
-or,
+or, \memoDS{Is this arithmetic right?  Shouldn't the 2.2 actually be 0.5, based on the 14.7MHz in eq. 12 and the 27.9MHz in eq. 8?}
 %%%
 \begin{eqnarray}
  \left( \frac{B}{10~\mbox{G}} \right) &>& 2.2 \left( \frac{a}{5~\mbox{AU}} \right)^{-1} \\
